# Image_processor

./: CMakeLists.txt  README.md  image_proc.cpp
include/: gui.hpp  proc.hpp
src/: gui.cpp  proc.cpp
tests/: grayscale_test.cpp  testBlur.cpp  testBlurSection.cpp  testGrayscale.cpp  testGrayscaleSection.cpp
